# docs/swagger.json
@@ -1,33 +1,20 @@
-// Package openapi Code generated by swaggo/swag. DO NOT EDIT
-package openapi
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "openapi": "3.1.0",
+{
+    "swagger": "2.0",
     "info": {
-      "title": "Datum OpenAPI 3.1.0 Specifications",
-      "description": "Documentation for Datum's API services",
-      "termsOfService": "https://datum.net/terms",
-      "contact": {
-        "name": "Datum Support",
-        "url": "https://datum.net/support",
-        "email": "support@datum.net"
-      },
-      "license": {
-        "name": "Apache 2.0",
-        "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
-      },
-      "version": "1.0.1"
+        "description": "API Key Authentication",
+        "title": "Datum API",
+        "termsOfService": "https://datum.net/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://datum.net/support",
+            "email": "support@datum.net"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
-    "servers": [
-      {
-        "url": "http://localhost:17608/v1"
-      },
-      {
-        "url": "https://api.datum.net/v1"
-      }
-    ],
     "paths": {
         "/forgot-password": {
             "get": {
@@ -99,9 +86,20 @@ const docTemplate = `{
                 }
             }
         },
+        "/livez": {
+            "get": {
+                "description": "Handles liveness check",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Liveness Handler",
+                "operationId": "liveness-handler",
+                "responses": {}
+            }
+        },
         "/login": {
             "post": {
-                "description": "Verifies the password submitted for the user is correct by looking up the user by email and using the argon2 derived key verification process to confirm the password matches",
+                "description": "Verifies the password submitted for the user is correct by looking up the user by email\nand using the argon2 derived key verification process to confirm the password matches",
                 "consumes": [
                     "application/json"
                 ],
@@ -143,6 +141,41 @@ const docTemplate = `{
                 "summary": "Metrics Handler",
                 "operationId": "metrics-handler",
                 "responses": {}
+            }
+        },
+        "/password-reset": {
+            "post": {
+                "description": "Allows the user to reset their password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Password Reset"
+                ],
+                "summary": "Reset Password",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ResetPasswordReply"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/route.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/ready": {
@@ -193,7 +226,7 @@ const docTemplate = `{
         },
         "/register": {
             "post": {
-                "description": "Creates a new user in the database with the specified password, allowing the user to login to Datum",
+                "description": "Creates a new user in the database with the specified password",
                 "consumes": [
                     "application/json"
                 ],
@@ -407,6 +440,17 @@ const docTemplate = `{
                 }
             }
         },
+        "handlers.ResetPasswordReply": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "reply": {
+                    "$ref": "#/definitions/rout.Reply"
+                }
+            }
+        },
         "handlers.VerifyReply": {
             "type": "object",
             "properties": {
@@ -475,16 +519,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
